--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -58,8 +58,6 @@ a:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 8px;
-  border-bottom: 0.2px solid var(--primary-text);
 }
 
 .section-title {
